--- a/template/base.html
+++ b/template/base.html
@@ -70,16 +70,16 @@
                     <div class="col-md-6 d-flex">
                         <ul class="navbar-nav">
     <li class="nav-item px-2">
-        <a href="{% url 'home' %}" class="btn">HOME</a>
+        <a href="{% url 'home' %}" class="btn">Home</a>
     </li>
     <li class="nav-item px-2">
-        <a href="{% url 'about' %}" class="btn">ABOUT</a>
+        <a href="{% url 'destination' %}" class="btn">Destination</a>
     </li>
     <li class="nav-item px-2">
-        <a href="{% url 'contact' %}" class="btn">CONTACT</a>
+        <a href="{% url 'package' %}" class="btn">Package</a>
     </li>
     <li class="nav-item px-2">
-        <a href="{% url 'review' %}" class="btn">REVIEW</a>
+        <a href="{% url 'review' %}" class="btn">Review</a>
     </li>
 </ul>
                     </div>
