--- a/template/TestApp/home.html
+++ b/template/TestApp/home.html
@@ -1,7 +1,7 @@
 {%extends 'base.html' %}
 {% block content%}
 {% load static %}
-<div class="container mt-4">
+<div class="container mt-4 ">
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -31,5 +31,38 @@
             </button>
         </div>
     </div>
+
+<div class="container-fluid py-5 bg-white">
+    <div class="container">
+        <div class="row align-items-start">
+
+            <!-- Bangladesh Map -->
+            <div class="col-md-5 text-center mb-4">
+                <img src="{% static 'images/home/icon4.png' %}" class="img-fluid" alt="BD Map Colored">
+            </div>
+
+            <!-- Tourist Highlights -->
+            <div class="col-md-7">
+                <!-- Sundarbans -->
+                <div class="d-flex mb-4 align-items-start">
+                    <img src="{% static 'images/home/shundarban.png' %}" class="rounded-circle me-3" width="150" height="150" alt="Sundarbans">
+                    <div class="bg-warning p-3 rounded-4">
+                        <strong>Sundarbans:</strong> <span class="d-inline-block">world's largest mangrove forest and a UNESCO World Heritage Site. This unique ecosystem is home to the Royal Bengal Tiger, spotted deer, crocodiles, and a diverse array of bird species. The forest is characterized by a complex network of tidal waterways, mudflats, and small islands, making it a unique and vital ecosystem.</span>
+                    </div>
+                </div>
+
+                <!-- Cox's Bazar -->
+                <div class="d-flex mt-4 align-items-start">
+                    <div class="bg-warning p-3 rounded-4 me-3">
+                        <strong>Cox's Bazar:</strong> <span class="d-inline-block">The coastal city in southeastern Bangladesh, renowned for its 120-kilometer-long unbroken sandy beach, the world's longest natural sea beach. This popular tourist destination offers attractions like Himchari National Park, Inani Beach, and Dulahazara Safari Park.</span>
+                    </div>
+                    <img src="{% static 'images/home/coxs.png' %}" class="rounded-circle" width="150" height="150" alt="Cox's Bazar">
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
 
 {% endblock%}
