--- a/template/TestApp/package.html
+++ b/template/TestApp/package.html
@@ -1,4 +1,33 @@
 {%extends 'base.html' %}
 {% block content%}
-<h1>Packages page </h1>
+{% load static %}
+<div class="container-fluid py-5 bg-light">
+    <div class="container pt-5 pb-3">
+        <div class="text-center mb-3 pb-3">
+            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Packages</h6>
+            <h1>Pefect Tour Packages</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="package-item bg-white mb-2">
+                    <img class="img-fluid" src="{% static 'images/home/coxs.png' %}" alt="coxs">
+                    <div class="p-4">
+                        <div class="d-flex justify-content-between mb-3">
+                            <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i> Cox's Bazar</small>
+                            <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i> 3 days</small>
+                            <small class="m-0"><i class="fa fa-user text-primary mr-2"></i> 2 Person</small>
+                        </div>
+                        <a class="h5 text-decoration-none" href="">Discover amazing places of the world</a>
+                        <div class="border-top mt-4 pt-4">
+                            <div class="d-flex justify-content-between">
+                                <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i> 4.5 <small>(250)</small></h6>
+                                <h5 class="m-0"><strong>৳</strong> 3500</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock%}
