--- a/template/base.html
+++ b/template/base.html
@@ -29,7 +29,47 @@
     width: 100%;
     object-fit: cover;
 }
+.bg-warning {
+    background-color: #ffd84a !important;
+    font-size: 14px;
+    line-height: 1.6;
+}
+.package-item:hover {
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+}
 
+.blog-item {
+  transition: .5s;
+}
+
+.blog-item:hover {
+  box-shadow: 0 0 30px #CCCCCC;
+}
+
+.blog-date {
+  position: absolute;
+  width: 60px;
+  height: 45px;
+  top: 30px;
+  left: -15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: #7AB730;
+}
+
+.blog-date::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 0;
+  top: -15px;
+  left: 0;
+  border: 8px solid;
+  border-color: transparent #5f8f25 #5f8f25 transparent;
+  z-index: -1;
+}
 /* Large screen image size */
 @media (min-width: 992px) {
     .carousel-item img {
@@ -43,13 +83,71 @@
         height: 350px;
     }
 }
-
 /* Footer */
-.footer {
-    background: #343a40;
-    color: white;
-    text-align: center;
-    padding: 10px;
+.footer .btn.btn-social {
+    margin-right: 5px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--light);
+    font-weight: normal;
+    border: 1px solid #FFFFFF;
+    border-radius: 35px;
+    transition: .3s;
+}
+
+.footer .btn.btn-social:hover {
+    color: var(--primary);
+}
+
+.footer .btn.btn-link {
+    display: block;
+    margin-bottom: 5px;
+    padding: 0;
+    text-align: left;
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: normal;
+    text-transform: capitalize;
+    transition: .3s;
+}
+
+.footer .btn.btn-link::before {
+    position: relative;
+    content: "\f105";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: 10px;
+}
+
+.footer .btn.btn-link:hover {
+    letter-spacing: 1px;
+    box-shadow: none;
+}
+
+.footer .copyright {
+    padding: 25px 0;
+    font-size: 15px;
+    border-top: 1px solid rgba(256, 256, 256, .1);
+}
+
+.footer .copyright a {
+    color: var(--light);
+    text-decoration: none;
+}
+
+.footer .footer-menu a {
+    margin-right: 15px;
+    padding-right: 15px;
+    border-right: 1px solid rgba(255, 255, 255, .1);
+}
+
+.footer .footer-menu a:last-child {
+    margin-right: 0;
+    padding-right: 0;
+    border-right: none;
 }
 </style>
 
@@ -69,26 +167,26 @@
                 <div class="row w-100 align-items-center">
                     <div class="col-md-6 d-flex">
                         <ul class="navbar-nav">
-    <li class="nav-item px-2">
-        <a href="{% url 'home' %}" class="btn">Home</a>
-    </li>
-    <li class="nav-item px-2">
-        <a href="{% url 'destination' %}" class="btn">Destination</a>
-    </li>
-    <li class="nav-item px-2">
-        <a href="{% url 'package' %}" class="btn">Package</a>
-    </li>
-    <li class="nav-item px-2">
-        <a href="{% url 'review' %}" class="btn">Review</a>
-    </li>
-</ul>
+                            <li class="nav-item px-2">
+                              <a href="{% url 'home' %}" class="btn">Home</a>
+                            </li>
+                            <li class="nav-item px-2">
+                               <a href="{% url 'destination' %}" class="btn">Destination</a>
+                            </li>
+                            <li class="nav-item px-2">
+                               <a href="{% url 'package' %}" class="btn">Package</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a href="{% url 'review' %}" class="btn">Review</a>
+                            </li>
+                        </ul>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end">
                         <form class="d-flex">
                             <input class="form-control me-2" type="search" placeholder="Search">
                             <button class="btn btn-outline-dark"><i class="fas fa-search"></i></button>
                         </form>
-                        <button class="btn ms-2"><i class="fa-solid fa-circle-user"></i></button>
+                        <button class="btn ms-2"><a href="{% url 'profile' %}"><i class="fa-solid fa-circle-user"></i></a></button>
                         <button class="btn ms-2"><i class="fa-solid fa-earth-americas"></i></button>
                     </div>
                 </div>
@@ -101,11 +199,75 @@
     {% endblock%}
     <!-- Footer -->
     <footer class="footer mt-5">
-        <div class="container">
-            <p>&copy; 2025 Desh Ghure. All rights reserved.</p>
-            <a href="#" class="text-white">Privacy Policy</a> |
-            <a href="#" class="text-white">Terms of Service</a>
+        <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Company</h4>
+                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="">Contact Us</a>
+                    <a class="btn btn-link" href="">Privacy Policy</a>
+                    <a class="btn btn-link" href="">Terms & Condition</a>
+                    <a class="btn btn-link" href="">FAQs & Help</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Contact</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Green Road, Dhaka</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+8801722191822</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>deshghure@gmial.com</p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Review</h4>
+                    <a href="{% url 'review' %}">
+                    <div class="row g-2 pt-2">
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="{% static 'images/home/shundarban.png' %}" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="{% static 'images/home/lalbagh.jpg' %}" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="{% static 'images/home/coxs.png' %}" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="{% static 'images/home/coxs.png' %}" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="{% static 'images/home/sonargaon.png' %}" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid bg-light p-1" src="{% static 'images/home/shhatghom.jpg' %}" alt="">
+                        </div>
+                    </div></a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Newsletter</h4>
+                    <p>Tell us your story</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="container">
+            <div class="copyright">
+                <div class="row">
+                    <div class="col-md-6 text-center m-auto">
+                        &copy; <a class="border-bottom" href="#">Desh Ghure</a>, All Right Reserved.
+                        Designed By <a class="border-bottom" href="#">Team Asif</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
     </footer>
 
 </body>
