--- a/template/TestApp/profile.html
+++ b/template/TestApp/profile.html
@@ -14,7 +14,7 @@
                 <h4 class="fw-bold text-decoration-underline">Yeasin Morshed Joy</h4>
                 <em>Taka thakley ghuurte jai</em>
                 <p class="mt-3">Visited: <strong>2</strong> spots<br>Wishlist: <strong>13</strong> spots</p>
-                <a href="#" class="btn btn-primary px-4 py-2 fw-bold">Post A Review</a>
+                <a href="{% url 'review_post' %}" class="btn btn-primary px-4 py-2 fw-bold">Post A Review</a>
             </div>
 
             <!-- Bucket List Form -->
