--- a/template/TestApp/package.html
+++ b/template/TestApp/package.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="package-item bg-white mb-2">
-                    <img class="img-fluid" src="{% static 'images/home/coxs.png' %}" alt="coxs">
+                    <img class="img-fluid fixed-image" src="{% static 'images/home/coxs.png' %}" alt="coxs">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-3">
                             <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i> Cox's Bazar</small>
@@ -27,6 +27,27 @@
                     </div>
                 </div>
             </div>
+        {% for package in packages %}  
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="package-item bg-white mb-2">
+                    <img class="img-fluid fixed-image" src="/media/{{package.package_img}}" alt="coxs">
+                    <div class="p-4">
+                        <div class="d-flex justify-content-between mb-3">
+                            <small class="m-0"><i class="fa fa-map-marker-alt text-primary mr-2"></i> {{package.location}}</small>
+                            <small class="m-0"><i class="fa fa-calendar-alt text-primary mr-2"></i> {{package.numofDay}} days</small>
+                            <small class="m-0"><i class="fa fa-user text-primary mr-2"></i> {{package.numofPeople}} Person</small>
+                        </div>
+                        <a class="h5 text-decoration-none" href="">{{package.caption}}</a>
+                        <div class="border-top mt-4 pt-4">
+                            <div class="d-flex justify-content-between">
+                                <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i> {{package.rating}}</h6>
+                                <h5 class="m-0"><strong>৳</strong> {{package.price}}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}    
         </div>
     </div>
 </div>
