--- a/template/base.html
+++ b/template/base.html
@@ -45,7 +45,7 @@
         line-height: 1.6;
       }
       .package-item:hover {
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
       }
 
       .blog-item {
@@ -78,7 +78,7 @@
         left: 0;
         border: 8px solid;
         border-color: transparent #5f8f25 #5f8f25 transparent;
-        z-index: -1;
+        z-index: 1;
       }
       .review-form {
             background-color: #ffffff;
