--- a/template/TestApp/destination.html
+++ b/template/TestApp/destination.html
@@ -1,4 +1,27 @@
 {%extends 'base.html' %}
 {% block content%}
-<h1>Destination page </h1>
+{% load static %}
+<div class="container-fluid py-5">
+    <div class="container pt-5 pb-3">
+        <div class="text-center mb-3 pb-3">
+            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Destination</h6>
+            <h1>Explore Top Destination</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="destination-item position-relative overflow-hidden mb-2">
+                    <img class="img-fluid" src="{% static 'images/home/chittagong.jpg' %}" alt="">
+                    <a class="destination-overlay text-white text-decoration-none" href="">
+                        <h5 class="text-white">United States</h5>
+                        <span>100 Cities</span>
+                    </a>
+                </div>
+            </div>
+
+            
+        </div>
+    </div>
+</div>
+
+
 {% endblock%}
