--- a/template/TestApp/profile.html
+++ b/template/TestApp/profile.html
@@ -15,8 +15,6 @@
                 {% else %}
                 <p>No profile picture uploaded.</p>
                 {% endif %}
-                
-                
                 <h4 class="fw-bold text-decoration-underline">{{ request.user.get_full_name|default:request.user.username }}</h4>
                 <em>{{ profile.bio }}</em>
                 <p class="mt-3">Visited: <strong>{{ visited_spots }}</strong> spots<br>Wishlist: <strong>{{ wishlist_spots }}</strong> spots</p>
@@ -27,7 +25,7 @@
             <div class="col-md-4 mb-4">
                 <div class="p-4 rounded-4" style="background-color: #e6faff;">
                     <h3 class="mb-4">Update bucket list</h3>
-                    
+
                     <form method="POST">
                         {% csrf_token %}
                         <div class="form-group mb-3">
@@ -35,7 +33,7 @@
                                 {% for loc in locations %}
                                     <option value="{{ loc.id }}">{{ loc.location }}</option>
                                 {% endfor %}
-                            </select> 
+                            </select>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="radio" name="status" id="wishlist" value="wishlist"  required>
@@ -53,9 +51,10 @@
 
             <!-- Bucket List Map -->
             <div class="col-md-4">
-                <h2 class="bucket-heading">My Bucket List</h2>
-
-                <img src="{% static 'images/home/icon2.png' %}" class="img-fluid rounded-3" alt="BD Map">
+                    <div class="p-4 rounded-4" style="background-color: #e6faff;">
+                        <h2 class="bucket-heading">My Bucket List</h2>
+                    {% include 'TestApp/components/clickable_map.html' %}
+                </div>
             </div>
         </div>
     </div>
