--- a/template/TestApp/profile.html
+++ b/template/TestApp/profile.html
@@ -15,8 +15,6 @@
                 {% else %}
                 <p>No profile picture uploaded.</p>
                 {% endif %}
-                
-                
                 <h4 class="fw-bold text-decoration-underline">{{ request.user.get_full_name|default:request.user.username }}</h4>
                 <em>{{ profile.bio }}</em>
                 <p class="mt-3">Visited: <strong>{{ visited_spots }}</strong> spots<br>Wishlist: <strong>{{ wishlist_spots }}</strong> spots</p>
@@ -53,9 +51,10 @@
 
             <!-- Bucket List Map -->
             <div class="col-md-4">
-                <h2 class="bucket-heading">My Bucket List</h2>
-
-                <img src="{% static 'images/home/icon2.png' %}" class="img-fluid rounded-3" alt="BD Map">
+                    <div class="p-4 rounded-4" style="background-color: #e6faff;">
+                        <h2 class="bucket-heading">My Bucket List</h2>
+                    {% include 'TestApp/components/clickable_map.html' %}
+                </div>
             </div>
         </div>
     </div>
