--- a/template/base.html
+++ b/template/base.html
@@ -88,7 +88,7 @@
         }
         .fixed-image {
             width: 100%;
-            height: 250px; /* or whatever height you want */
+            height: 250px !important;
             object-fit: cover;
             border-radius: 5px;
 }
