--- a/template/TestApp/profile.html
+++ b/template/TestApp/profile.html
@@ -18,7 +18,8 @@
                 <h4 class="fw-bold text-decoration-underline">{{ request.user.get_full_name|default:request.user.username }}</h4>
                 <em>{{ profile.bio }}</em>
                 <p class="mt-3">Visited: <strong>{{ visited_spots }}</strong> spots<br>Wishlist: <strong>{{ wishlist_spots }}</strong> spots</p>
-                <a href="{% url 'review_post' %}" class="btn btn-primary px-4 py-2 fw-bold">Post A Review</a>
+                <a href="{% url 'review_post' %}" class="btn btn-primary px-4 py-2 fw-bold">Post A Review</a> <br>
+                <a href="{% url 'my_reviews' %}" class="btn btn-success px-4 py-2 fw-bold mt-2">My Reviews</a>
             </div>
 
             <!-- Bucket List Form -->
