--- a/template/TestApp/package.html
+++ b/template/TestApp/package.html
@@ -28,7 +28,9 @@
                 </div>
             </div>
         {% for package in packages %}  
+           
             <div class="col-lg-4 col-md-6 mb-4">
+                <a href="{% url 'package_detail' package.id %}" class="text-decoration-none">
                 <div class="package-item bg-white mb-2">
                     <img class="img-fluid fixed-image" src="/media/{{package.package_img}}" alt="coxs">
                     <div class="p-4">
@@ -46,7 +48,9 @@
                         </div>
                     </div>
                 </div>
+            </a>  
             </div>
+             
         {% endfor %}    
         </div>
     </div>
