--- a/template/base.html
+++ b/template/base.html
@@ -247,7 +247,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg px-4">
+    <nav class="navbar navbar-expand-lg px-4 sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
