--- a/template/TestApp/destination.html
+++ b/template/TestApp/destination.html
@@ -33,9 +33,9 @@
         <div class="container-fluid bg-light py-3 mb-4">
             <div class="d-flex flex-wrap justify-content-center nav nav-pills" id="divisionTabs">
               {% for division in divisions %}
-                <a href="?division={{ division.id }}"
-                   class="nav-link mx-2 mb-2 {% if division.id == selected_division_id %}active bg-primary text-white{% else %}bg-info text-white{% endif %}"
-                   style="width: 120px; text-align: center; border-radius: 5px;">
+                <a href="?division={{ division.id }}#locationList"
+                   class="nav-link mx-2 mb-2 {% if division.id == selected_division_id %}active  text-white{% else %}bg-info  text-white{% endif %}"
+                   style="width: 140px; text-align: center; border-radius: 5px;">
                   <img src="{% static 'images/divisions/'|add:division.name|add:'.svg' %}" alt="{{ division.name }}" class="img-fluid mb-2" >
                   <div class="small fw-bold text-uppercase">{{ division.name }}</div>
                 </a>
@@ -44,7 +44,7 @@
           </div>
         
           <div class="container">
-            <div class="row">
+            <div class="row" id="locationList">
               {% for location in locations %}
                 <div class="col-12 mb-4">
                   <div class="d-flex flex-column flex-md-row shadow-sm bg-white rounded overflow-hidden">
