--- a/template/base.html
+++ b/template/base.html
@@ -86,6 +86,12 @@
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
+        .fixed-image-box {
+            width: 100%;
+            height: 350px !important;
+            object-fit: cover;
+            border-radius: 5px;
+}
         .fixed-image {
             width: 100%;
             height: 250px !important;
@@ -162,6 +168,10 @@
   bottom: 0px;
   left: 0px;
   border-width: 30px;
+}
+.mapCard_red{
+  background-color: rgba(176, 29, 16, 0.788);
+  color: rgb(0, 168, 171);
 }
 
       /* Large screen image size */
