--- a/template/base.html
+++ b/template/base.html
@@ -18,248 +18,17 @@
     <!-- Font Awesome Icons -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-      .navbar {
-        background-color: #ececec;
-      }
-      .nav-item .btn {
-        background-color: #68a29d;
-        color: white;
-        border-radius: 10px;
-        margin: 7px 0;
-      }
-
-      /* Carousel Image Sizes */
-      .carousel-item img {
-        width: 100%;
-        object-fit: cover;
-      }
-      .bg-warning {
-        background-color: #ffd84a !important;
-        font-size: 14px;
-        line-height: 1.6;
-      }
-      .package-item:hover {
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-      }
-
-      .blog-item {
-        transition: 0.5s;
-      }
-
-      .blog-item:hover {
-        box-shadow: 0 0 30px #cccccc;
-      }
-
-      .blog-date {
-        position: absolute;
-        width: 60px;
-        height: 45px;
-        top: 30px;
-        left: -15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        background: #7ab730;
-      }
-
-      .blog-date::after {
-        position: absolute;
-        content: "";
-        width: 0;
-        height: 0;
-        top: -15px;
-        left: 0;
-        border: 8px solid;
-        border-color: transparent #5f8f25 #5f8f25 transparent;
-        z-index: 1;
-      }
-      .review-form {
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        }
-        .fixed-image-box {
-            width: 100%;
-            height: 350px !important;
-            object-fit: cover;
-            border-radius: 5px;
-}
-        .fixed-image {
-            width: 100%;
-            height: 250px !important;
-            object-fit: cover;
-            border-radius: 5px;
-}
-        .form-title {
-            font-weight: bold;
-            color: #333;
-        }
-
-        .text-white {
-            color: #fff !important;
-      }
-        .text-decoration-none {
-           text-decoration: none !important;
-      }
-      .destination-overlay {
-        position: absolute;
-        top: 30px;
-        right: 30px;
-        bottom: 30px;
-        left: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background: rgba(0, 0, 0, 0.3);
-        border: 1px solid rgba(255, 255, 255, 0.5);
-        transition: .5s;
-        z-index: 1;
-}
-.img-fluid {
-  max-width: 100%;
-  height: auto;
-}
-.mb-2,
-.my-2 {
-  margin-bottom: 0.5rem !important;
-}
-.overflow-hidden {
-  overflow: hidden !important;
-}
-.position-relative {
-  position: relative !important;
-}
-.destination-item img {
-  transition: .5s;
-}
-
-.destination-item:hover img {
-  transform: scale(1.3);
-}
-
-.destination-overlay {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  bottom: 30px;
-  left: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  transition: .5s;
-  z-index: 1;
-}
-
-.destination-item:hover .destination-overlay {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  border-width: 30px;
-}
-.mapCard_red{
-  background-color: rgba(176, 29, 16, 0.788);
-  color: rgb(0, 168, 171);
-}
-
-      /* Large screen image size */
-      @media (min-width: 992px) {
-        .carousel-item img {
-          height: 580px;
-        }
-      }
-
-      /* Small screen image size */
-      @media (max-width: 991px) {
-        .carousel-item img {
-          height: 350px;
-        }
-      }
-      /* Footer */
-      .footer .btn.btn-social {
-        margin-right: 5px;
-        width: 35px;
-        height: 35px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: var(--light);
-        font-weight: normal;
-        border: 1px solid #ffffff;
-        border-radius: 35px;
-        transition: 0.3s;
-      }
-
-      .footer .btn.btn-social:hover {
-        color: var(--primary);
-      }
-
-      .footer .btn.btn-link {
-        display: block;
-        margin-bottom: 5px;
-        padding: 0;
-        text-align: left;
-        color: #ffffff;
-        font-size: 15px;
-        font-weight: normal;
-        text-transform: capitalize;
-        transition: 0.3s;
-      }
-
-      .footer .btn.btn-link::before {
-        position: relative;
-        content: "\f105";
-        font-family: "Font Awesome 5 Free";
-        font-weight: 900;
-        margin-right: 10px;
-      }
-
-      .footer .btn.btn-link:hover {
-        letter-spacing: 1px;
-        box-shadow: none;
-      }
-
-      .footer .copyright {
-        padding: 25px 0;
-        font-size: 15px;
-        border-top: 1px solid rgba(256, 256, 256, 0.1);
-      }
-
-      .footer .copyright a {
-        color: var(--light);
-        text-decoration: none;
-      }
-
-      .footer .footer-menu a {
-        margin-right: 15px;
-        padding-right: 15px;
-        border-right: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      .footer .footer-menu a:last-child {
-        margin-right: 0;
-        padding-right: 0;
-        border-right: none;
-      }
-    </style>
+   
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg px-4 sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'home' %}">
           <img
             src="{% static 'images/home/logo.png' %}"
             alt="Desh Ghure"
@@ -293,13 +62,16 @@
               </ul>
             </div>
             <div class="col-md-6 d-flex justify-content-end">
-              <form class="d-flex">
+             
+              <form class="d-flex" method="GET" action="{% url 'search_results' %}">
                 <input
                   class="form-control me-2"
                   type="search"
+                  name="search"
                   placeholder="Search"
+                  value="{{ request.GET.search }}" required
                 />
-                <button class="btn btn-outline-dark">
+                <button class="btn btn-outline-dark" type="submit">
                   <i class="fas fa-search"></i>
                 </button>
               </form>
@@ -338,15 +110,8 @@
       >
         <div class="container py-5">
           <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-              <h4 class="text-white mb-3">Company</h4>
-              <a class="btn btn-link" href="">About Us</a>
-              <a class="btn btn-link" href="">Contact Us</a>
-              <a class="btn btn-link" href="">Privacy Policy</a>
-              <a class="btn btn-link" href="">Terms & Condition</a>
-              <a class="btn btn-link" href="">FAQs & Help</a>
-            </div>
-            <div class="col-lg-3 col-md-6">
+          
+            <div class="col-lg-4 col-md-6">
               <h4 class="text-white mb-3">Contact</h4>
               <p class="mb-2">
                 <i class="fa fa-map-marker-alt me-3"></i>Green Road, Dhaka
@@ -361,18 +126,18 @@
                 <a class="btn btn-outline-light btn-social" href=""
                   ><i class="fab fa-twitter"></i
                 ></a>
-                <a class="btn btn-outline-light btn-social" href=""
+                <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/juairia.tomas"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
                 <a class="btn btn-outline-light btn-social" href=""
                   ><i class="fab fa-youtube"></i
                 ></a>
-                <a class="btn btn-outline-light btn-social" href=""
+                <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/asif-iqbal-b9026a213"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4 col-md-6">
               <h4 class="text-white mb-3">Review</h4>
               <a href="{% url 'review' %}">
                 <div class="row g-2 pt-2">
@@ -420,7 +185,7 @@
                   </div></div
               ></a>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4 col-md-6">
               <h4 class="text-white mb-3">Newsletter</h4>
               <p>Tell us your story</p>
               <div class="position-relative mx-auto" style="max-width: 400px">
@@ -433,7 +198,7 @@
                   type="button"
                   class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
                 >
-                  SignUp
+                  <a href="{% url 'registration' %}" style="text-decoration: none; color: #ffffff;">SignUp</a>
                 </button>
               </div>
             </div>
