--- a/template/components/clickable_map.html
+++ b/template/components/clickable_map.html
@@ -893,7 +893,7 @@ id="path189" />
 <g
 id="Layer_3"
 transform="rotate(-0.9616789,9694.9309,42818.428)">
-<a xlink:href="{% url 'division_detail' 'dhaka' %}"><g
+<a xlink:href="{% url 'division_detail' 'Dhaka' %}"><g
 id="dhaka_text"
 transform="translate(708.13682,-154.43042)">
 <path
@@ -932,7 +932,7 @@ stroke-miterlimit="10"
 d="m 583.283,538.805 8.352,34.272 h -9.504 l -0.911,-6 h -7.104 l -0.912,6 h -9.36 l 8.208,-34.272 z m -5.664,7.008 -2.448,14.544 h 4.992 l -2.448,-14.544 z"
 id="path194" />
 </g></a>
-<a xlink:href="{% url 'division_detail' 'sylhet' %}"><g
+<a xlink:href="{% url 'division_detail' 'Sylhet' %}"><g
 id="sylhet_text">
 <path
 fill="#ffffff"
@@ -1097,7 +1097,7 @@ stroke-miterlimit="10"
 d="m 369.831,845.311 8.352,34.272 h -9.504 l -0.911,-6 h -7.104 l -0.912,6 h -9.36 l 8.208,-34.272 z m -5.664,7.007 -2.448,14.545 h 4.992 l -2.448,-14.545 z"
 id="path216" />
 </g></a>
-<a xlink:href="{% url 'division_detail' 'RAJSHAHI' %}"><g
+<a xlink:href="{% url 'division_detail' 'Rajshahi' %}"><g
 id="RAJSHAHI_text"
 transform="translate(708.13682,-154.43042)">
 <path
@@ -1157,7 +1157,7 @@ stroke-miterlimit="10"
 d="m 349.713,450.401 v 34.272 h -8.928 v -34.272 z"
 id="path224" />
 </g></a>
-<a xlink:href="{% url 'division_detail' 'rangpur' %}"><g
+<a xlink:href="{% url 'division_detail' 'Rangpur' %}"><g
 id="RANGPUR_text"
 transform="translate(784.34463,-110.70051)">
 <path
