--- a/template/TestApp/edit_review.html
+++ b/template/TestApp/edit_review.html
@@ -28,7 +28,7 @@
 
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Update Review</button>
-                    <a href="{% url 'my_reviews' %}" class="btn btn-secondary">Cancel</a>
+                    <a href="{% url 'my_reviews' %}" class="btn btn-secondary mt-2">Cancel</a>
                 </form>
             </div>
         </div>
